--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </style><style>.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}.gm-style .gm-style-mtc ul,.gm-style .gm-style-mtc li{box-sizing:border-box}
 </style><style>.LGLeeN-keyboard-shortcuts-view{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex}.LGLeeN-keyboard-shortcuts-view table,.LGLeeN-keyboard-shortcuts-view tbody,.LGLeeN-keyboard-shortcuts-view td,.LGLeeN-keyboard-shortcuts-view tr{background:inherit;border:none;margin:0;padding:0}.LGLeeN-keyboard-shortcuts-view table{display:table}.LGLeeN-keyboard-shortcuts-view tr{display:table-row}.LGLeeN-keyboard-shortcuts-view td{-moz-box-sizing:border-box;box-sizing:border-box;display:table-cell;color:#000;padding:6px;vertical-align:middle;white-space:nowrap}.LGLeeN-keyboard-shortcuts-view td .VdnQmO-keyboard-shortcuts-view--shortcut-key{background-color:#e8eaed;border-radius:2px;border:none;-moz-box-sizing:border-box;box-sizing:border-box;color:inherit;display:inline-block;font-family:Google Sans Text,Roboto,Arial,sans-serif;line-height:16px;margin:0 2px;min-height:20px;min-width:20px;padding:2px 4px;position:relative;text-align:center}
 </style><style>.gm-control-active>img{box-sizing:content-box;display:none;left:50%;pointer-events:none;position:absolute;top:50%;transform:translate(-50%,-50%)}.gm-control-active>img:nth-child(1){display:block}.gm-control-active:focus>img:nth-child(1),.gm-control-active:hover>img:nth-child(1),.gm-control-active:active>img:nth-child(1),.gm-control-active:disabled>img:nth-child(1){display:none}.gm-control-active:focus>img:nth-child(2),.gm-control-active:hover>img:nth-child(2){display:block}.gm-control-active:active>img:nth-child(3){display:block}.gm-control-active:disabled>img:nth-child(4){display:block}
-</style><link type="text/css" rel="stylesheet" href="./Flatrica _ Material CV_Resume_files/css"><link type="text/css" rel="stylesheet" href="./Flatrica _ Material CV_Resume_files/css(1)"><style>.gm-ui-hover-effect{opacity:.6}.gm-ui-hover-effect:hover{opacity:1}.gm-ui-hover-effect>span{background-color:#000}@media (forced-colors:active),(prefers-contrast:more){.gm-ui-hover-effect>span{background-color:ButtonText}}
+</style><link type="text/css" rel="stylesheet" href="./web_cv/css"><link type="text/css" rel="stylesheet" href="./web_cv/css(1)"><style>.gm-ui-hover-effect{opacity:.6}.gm-ui-hover-effect:hover{opacity:1}.gm-ui-hover-effect>span{background-color:#000}@media (forced-colors:active),(prefers-contrast:more){.gm-ui-hover-effect>span{background-color:ButtonText}}
 </style><style>.gm-style .gm-style-cc a,.gm-style .gm-style-cc button,.gm-style .gm-style-cc span,.gm-style .gm-style-mtc div{font-size:10px;box-sizing:border-box}.gm-style .gm-style-cc a,.gm-style .gm-style-cc button,.gm-style .gm-style-cc span{outline-offset:3px}
 </style><style>@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style>.gm-style-moc{background-color:rgba(0,0,0,.45);pointer-events:none;text-align:center;transition:opacity ease-in-out}.gm-style-mot{color:white;font-family:Roboto,Arial,sans-serif;font-size:22px;margin:0;position:relative;top:50%;transform:translateY(-50%);-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%)}
 </style><style>.gm-style img{max-width: none;}.gm-style {font: 400 11px Roboto, Arial, sans-serif; text-decoration: none;}</style>
@@ -17,7 +17,7 @@
 
 
     <title>Welcome on my site!</title>
-    <link rel="icon" href="./Flatrica _ Material CV_Resume_files/favicon-32x32.png">
+    <link rel="icon" href="./web_cv/favicon-32x32.png">
 
     <!--APPLE TOUCH ICON-->
     <link rel="apple-touch-icon" href="https://www.trimatrixlab.com/store/flatrica/images/site/apple-touch-icon.png">
@@ -31,28 +31,28 @@
     <!-- MATERIAL ICON FONT -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- FONT AWESOME -->
-    <link href="./Flatrica _ Material CV_Resume_files/font-awesome.css" rel="stylesheet">
+    <link href="./web_cv/font-awesome.css" rel="stylesheet">
 
 
     <!-- ANIMATION -->
-    <link href="./Flatrica _ Material CV_Resume_files/animate.min.css" rel="stylesheet">
+    <link href="./web_cv/animate.min.css" rel="stylesheet">
 
     <!-- MAGNIFICENT POPUP -->
-    <link href="./Flatrica _ Material CV_Resume_files/magnific-popup.css" rel="stylesheet">
+    <link href="./web_cv/magnific-popup.css" rel="stylesheet">
 
     <!-- SWIPER -->
-    <link href="./Flatrica _ Material CV_Resume_files/swiper.min.css" rel="stylesheet">
+    <link href="./web_cv/swiper.min.css" rel="stylesheet">
 
 
     <!-- MATERIALIZE -->
-    <link href="./Flatrica _ Material CV_Resume_files/materialize.css" rel="stylesheet">
+    <link href="./web_cv/materialize.css" rel="stylesheet">
     <!-- BOOTSTRAP -->
-    <link href="./Flatrica _ Material CV_Resume_files/bootstrap.min.css" rel="stylesheet">
+    <link href="./web_cv/bootstrap.min.css" rel="stylesheet">
 
     <!-- CUSTOM STYLE -->
-    <link href="./Flatrica _ Material CV_Resume_files/style_dark_dark.css" id="switch_style" rel="stylesheet">
+    <link href="./web_cv/style_dark_dark.css" id="switch_style" rel="stylesheet">
 
-<script type="text/javascript" charset="UTF-8" src="./Flatrica _ Material CV_Resume_files/common.js"></script><script type="text/javascript" charset="UTF-8" src="./Flatrica _ Material CV_Resume_files/util.js"></script><script type="text/javascript" charset="UTF-8" src="./Flatrica _ Material CV_Resume_files/marker.js"></script><script type="text/javascript" charset="UTF-8" src="./Flatrica _ Material CV_Resume_files/map.js"></script><script type="text/javascript" charset="UTF-8" src="./Flatrica _ Material CV_Resume_files/overlay.js"></script><script type="text/javascript" charset="UTF-8" src="./Flatrica _ Material CV_Resume_files/onion.js"></script><script type="text/javascript" charset="UTF-8" src="./Flatrica _ Material CV_Resume_files/controls.js"></script></head>
+<script type="text/javascript" charset="UTF-8" src="./web_cv/common.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/util.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/marker.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/map.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/overlay.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/onion.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/controls.js"></script></head>
 <body class="vsc-initialized">
 
 
@@ -79,7 +79,7 @@
 
                     <!-- PROFILE PICTURE -->
                     <div id="profile" class="right">
-                        <img alt="profile-image" class="img-responsive" src="./Flatrica _ Material CV_Resume_files/profile.jpg">
+                        <img alt="profile-image" class="img-responsive" src="./web_cv/profile.jpg">
                         <div class="slant"></div>
 
                         <!--EMPTY PLUS BUTTON-->
@@ -154,7 +154,7 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
                     <div id="about-btn" class="card-action">
                         <div class="about-btn">
                             <!-- DOWNLOAD CV BUTTON -->
-                            <a href="./Flatrica _ Material CV_Resume_files/resume.pdf" class="btn waves-effect">Download CV</a>
+                            <a href="./web_cv/resume.pdf" class="btn waves-effect">Download CV</a>
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
     <div class="container">
         <!-- SECTION TITLE -->
         <div class="section-title">
-            <h4 class="text-uppercase text-center"><img src="./Flatrica _ Material CV_Resume_files/book.png" alt="demo" data-sr-id="1" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">Education</h4>
+            <h4 class="text-uppercase text-center"><img src="./web_cv/book.png" alt="demo" data-sr-id="1" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">Education</h4>
         </div>
 
         <div id="timeline-education">
@@ -213,7 +213,7 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
     <div class="container">
         <!-- SECTION TITLE -->
         <div class="section-title">
-            <h4 class="text-uppercase text-center"><img src="./Flatrica _ Material CV_Resume_files/mixer.png" alt="demo" data-sr-id="14" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">Skills</h4>
+            <h4 class="text-uppercase text-center"><img src="./web_cv/mixer.png" alt="demo" data-sr-id="14" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">Skills</h4>
         </div>
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
@@ -330,7 +330,7 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
     <div class="container">
         <!-- SECTION TITLE -->
         <div class="section-title">
-            <h4 class="text-uppercase text-center"><img src="./Flatrica _ Material CV_Resume_files/layers.png" alt="demo" data-sr-id="16" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">Experience</h4>
+            <h4 class="text-uppercase text-center"><img src="./web_cv/layers.png" alt="demo" data-sr-id="16" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">Experience</h4>
         </div>
 
         <div id="timeline-experience">
@@ -466,7 +466,7 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
                 </div>
                 <!--MODAL BODY-->
                 <div class="modal-body">
-                    <img class="img-responsive" alt="graduation" src="./Flatrica _ Material CV_Resume_files/demo-gra.jpg">
+                    <img class="img-responsive" alt="graduation" src="./web_cv/demo-gra.jpg">
                     <p>
                         I have learned a great many things from participating in varsity football.
                         It has changed my entire outlook on and attitude toward life. Before my
@@ -535,7 +535,7 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
                 </div>
                 <!--MODAL BODY-->
                 <div class="modal-body">
-                    <img class="img-responsive" alt="graduation" src="./Flatrica _ Material CV_Resume_files/demo-gra.jpg">
+                    <img class="img-responsive" alt="graduation" src="./web_cv/demo-gra.jpg">
                     <p>
                         I have learned a great many things from participating in varsity football.
                         It has changed my entire outlook on and attitude toward life. Before my
@@ -623,7 +623,7 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
     <div class="container">
         <!-- SECTION TITLE -->
         <div class="section-title">
-            <h4 class="text-uppercase text-center"><img src="./Flatrica _ Material CV_Resume_files/heart.png" alt="demo" data-sr-id="29" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">Interest</h4>
+            <h4 class="text-uppercase text-center"><img src="./web_cv/heart.png" alt="demo" data-sr-id="29" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">Interest</h4>
         </div>
 
         <div id="interest-card" class="card" data-sr-id="30" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: box-shadow 0.25s ease 0s, transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">
@@ -656,15 +656,15 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
 <!--==========================================
                   SCRIPTS
 ===========================================-->
-<script src="./Flatrica _ Material CV_Resume_files/jquery-2.1.3.min.js"></script>
-<script src="./Flatrica _ Material CV_Resume_files/bootstrap.min.js"></script>
-<script src="./Flatrica _ Material CV_Resume_files/materialize.min.js"></script>
-<script src="./Flatrica _ Material CV_Resume_files/markerwithlabel.min.js"></script>
-<script src="./Flatrica _ Material CV_Resume_files/retina.min.js"></script>
-<script src="./Flatrica _ Material CV_Resume_files/scrollreveal.min.js"></script>
-<script src="./Flatrica _ Material CV_Resume_files/swiper.jquery.min.js"></script>
-<script src="./Flatrica _ Material CV_Resume_files/jquery.magnific-popup.min.js"></script>
-<script src="./Flatrica _ Material CV_Resume_files/custom-dark.js"></script>
+<script src="./web_cv/jquery-2.1.3.min.js"></script>
+<script src="./web_cv/bootstrap.min.js"></script>
+<script src="./web_cv/materialize.min.js"></script>
+<script src="./web_cv/markerwithlabel.min.js"></script>
+<script src="./web_cv/retina.min.js"></script>
+<script src="./web_cv/scrollreveal.min.js"></script>
+<script src="./web_cv/swiper.jquery.min.js"></script>
+<script src="./web_cv/jquery.magnific-popup.min.js"></script>
+<script src="./web_cv/custom-dark.js"></script>
 
 <style type="text/css">
     #timeline-education:before {
