--- a/barber/index.html
+++ b/barber/index.html
@@ -6,18 +6,18 @@
   </head>
   <body>
     <div class="grid-container">
-      <div class="grid-item">1</div>
-      <div class="grid-item">2</div>
-      <div class="grid-item">3</div>
-      <div class="grid-item">4</div>
-      <div class="grid-item">5</div>
-      <div class="grid-item">6</div>
-      <div class="grid-item">7</div>
-      <div class="grid-item">8</div>
-      <div class="grid-item">9</div>
-      <div class="grid-item">10</div>
-      <div class="grid-item">11</div>
-      <div class="grid-item">12</div>
+      <div class="grid-item"><img src="media/haircut-1.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-2.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-3.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-4.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-5.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-6.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-7.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-8.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-9.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-10.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-11.jpg"></div>
+      <div class="grid-item"><img src="media/haircut-12.jpg"></div>
     </div>
   </body>
 </html>
