Set background as Image

--- a/barber/index.html
+++ b/barber/index.html
@@ -5,19 +5,11 @@
     <link rel="stylesheet" href="Style.css">
   </head>
   <body>
-    <div class="grid-container">
-      <div class="grid-item"><img src="media/haircut-1.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-2.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-3.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-4.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-5.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-6.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-7.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-8.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-9.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-10.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-11.jpg"></div>
-      <div class="grid-item"><img src="media/haircut-12.jpg"></div>
-    </div>
+    
+      <img class="background" src="media/BackGround.png">
+      <img class="shade" src="media/Shade.png">
+    
+    <p class="BarberLabel"> Barber shop Gajdica</p>
+    <button> Objednat sa</button>
   </body>
 </html>
