--- a/barber/index.html
+++ b/barber/index.html
@@ -20,6 +20,10 @@
       <div class="grid-item" style="background-image: url('media/haircut-11.jpg')"></div>
       <div class="grid-item" style="background-image: url('media/haircut-12.jpg')"></div>
     </div>
-    
+    <a href="https://google.com">
+      <button id="button">
+        Rezervovať sa
+    </button>
+    </a>
   </body>
 </html>
