--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <!-- NAME & STATUS -->
                         <div class="info-headings">
                             <h4 class="text-uppercase left">Róbert Steiner</h4>
-                            <h6 class="text-capitalize left">Mobile Expert &amp; Jr Software Engineer &amp; Game Enthusiast</h6>
+                            <h6 class="text-capitalize left">Trainee Software Engineer @IBM</h6>
                         </div>
 
                         <!-- CONTACT INFO -->
