--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <!-- NAME & STATUS -->
                         <div class="info-headings">
                             <h4 class="text-uppercase left">Róbert Steiner</h4>
-                            <h6 class="text-capitalize left">Trainee Software Engineer @IBM</h6>
+                            <h6 class="text-capitalize left">Trainee Software Engineer @ IBM</h6>
                         </div>
 
                         <!-- CONTACT INFO -->
@@ -452,7 +452,7 @@ Tech and game enthusiast interested in machine learning and AI with exposure to 
                 <div class="card timeline-content" data-sr-id="26" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: box-shadow 0.25s ease 0s, transform 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 1.1s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; ">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Application developer</h6>
+                        <h6 class="timeline-title">Trainee Software Engineer</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
