--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-Tech and game enthusiast interested in machine learning and AI with exposure to C#, Python, Unity and Blender. 
-    Currently, on an enterpreneurial journey running my own mobile device service shop.
+Tech and game enthusiast interested in software development and AI with exposure to C#, Python, Unity and Blender. Currently, working @ IBM as trainee software engineer.
+
                         </p>
                     </div>
 
