--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-Tech and game enthusiast interested in software development and AI with exposure to C#, Python, Unity and Blender. Currently, working @ IBM as trainee software engineer.
+Tech and game enthusiast interested in software development and AI with exposure to C#, Python, Unity and Blender. Currently, working @ IBM as a trainee software engineer.
 
                         </p>
                     </div>
