--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-Tech and game enthusiast interested in software development and AI with exposure to C#, Python, Unity and Blender. Currently, working @ IBM as a trainee software engineer.
+                            Trainee Software Engineer @ IBM, dabbling in C# and Python. 
+                            Interested in games & game development. 
+                            A bit of hands-on experience with Unity and Blender.
 
                         </p>
                     </div>
