--- a/blog.html
+++ b/blog.html
@@ -133,7 +133,7 @@
             <div class="col-md-12">
                 <!-- DETAILS -->
                 <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
-                    <div class="card-content-blog">
+                    <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <h1>Summary - Atomic Habits, James Clear, Tiny Changes-Remarkable Results, Chapter 1</h1>
                         <p>
