--- a/barber/index.html
+++ b/barber/index.html
@@ -20,9 +20,24 @@
       <div class="grid-item" style="background-image: url('media/haircut-11.jpg')"></div>
       <div class="grid-item" style="background-image: url('media/haircut-12.jpg')"></div>
     </div>
+    <h1 id="headtitle"> Barber shop Gelnica </h1>
+    <div id="contact">
+      <p>Phone number: 0911111111</p>
+      <p>Email adress: barber@barber.br</p>
+    </div>
     <a href="https://google.com">
       <button id="button">
         Rezervovať sa
+    </button>
+    </a>
+    <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7">
+      <button id="map-button">
+        Mapy
+    </button>
+    </a>
+    <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7">
+      <button id="ig-button">
+        
     </button>
     </a>
   </body>
