--- a/barber/index.html
+++ b/barber/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7LWMKBBVHL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7LWMKBBVHL');
+</script>
     <title>Barber shop Gajdica</title>
     <link rel="stylesheet" href="Style.css">
   </head>
