--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,11 @@
 <!--==========================================
                     HEADER
 ===========================================-->
-
+<div id="blog" style="width: 200px; margin-left: auto; margin-right: auto; margin-top: 30px; float: none; " >
+    <div class="blog-btn" id="blog-btn" >
+        <a href="./index.html" class="btn waves-effect" style="text-align: center; width: 200px;">Home page</a>
+    </div>
+</div>
 
 <div id="bout" class="section">
     <div class="container">
