Blog- Added chapter 4

--- a/blog.html
+++ b/blog.html
@@ -103,7 +103,7 @@
                 <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
-                        <h3 style="text-align: center;"> Learning programming on your own - the hurdles and the pleasures </h3>
+                        <h3 style="text-align: center;" > Learning programming on your own - the hurdles and the pleasures </h3>
                         <h5 style="text-align: center;"> 2023-01-29</h5>
                         <p class="blog-blog">
                             &emsp; &emsp;There are many people in the world who work as programmers. But not everyone went to college and studied programming. Some of them are learning programming on their own. Is it possible to study on your own and be on the same level of knowledge as a college student? No, haha.
@@ -188,15 +188,15 @@
         </div>
     </div>
 </div>
-<div id="about" class="section">
-    <div class="container">
+<div id="about" class="section" >
+    <div class="container" >
         <div class="row">
             <div class="col-md-12">
                 <!-- DETAILS -->
                 <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
-                        <h3 style="text-align: center;">Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 3</h3>
+                        <h3 style="text-align: center;" >Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 3 </h3>
                         <h5 style="text-align: center;"> 2023-02-26</h5>
                         <p class="blog-blog">
                             &emsp; &emsp;Psychologist Edward Thorndike was doing an experiment with cats. He discovered that repeating one action that gives us pleasure and reward is better to build a habit than an action which doesn't have a good and positive effect on us. This is the key to successfully creating a habit.
@@ -207,6 +207,30 @@
                             <br><br> &emsp; &emsp;We can divide those laws into two phases. Problem phase that contains Cue and Craving steps and Solution phase - Response and Reward steps.
                             <br><br> &emsp; &emsp;The author defined a set of rules for creating a new good habit, but also for removing a bad one. For example, for creating a new habit: Cue - Make it obvious, Craving - Make it attractive, Response - Make it easy, Reward - Make it satisfying. For breaking some bad habits we can invert those rules.
                         
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="about" class="section" >
+    <div class="container" >
+        <div class="row">
+            <div class="col-md-12">
+                <!-- DETAILS -->
+                <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
+                    <div class="card-content">
+                        <!-- ABOUT PARAGRAPH -->
+                        <h3 style="text-align: center;" >Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 4 </h3>
+                        <h5 style="text-align: center;"> 2023-03-05</h5>
+                        <p class="blog-blog">
+                            &emsp; &emsp;Chapter 4 starts with a story about a paramedic woman who saves the life of her father-in-law and about military analysts and their work with radar systems. Those stories have one thing in common and that is - if you are doing something repeatedly, your brain starts noticing important things, learning patterns and storing them for future use.
+                            <br><br> &emsp; &emsp;If you get enough experience with some specific thing, your brain is able to detect and deal with it without thinking about it - automatically. Those experiences may print directly into your unconscious mind. This can have a positive influence for good habits but also it could be dangerous for the bad ones.
+                            <br><br> &emsp; &emsp;If we want to build a new habit, it is important to take control over existing ones. It could be hard because they are mostly subconscious and you are doing it automatically.
+                            <br><br> &emsp; &emsp;There is a process named Pointing-and-Calling. The main idea is that while you are doing something, you point at things and name them out loud. With this approach your consciousness takes control over this action. 
+                            <br><br> &emsp; &emsp;It is wrong to call habits with names such as good or bad. It always depends on your goal. If you want to lose weight, maybe it is good for you to eat less, but for other people who want to gain some muscle, eating is important and prosperous. It is a good approach to scoring your habits and giving them value. 
+
                         </p>
                     </div>
                 </div>
