--- a/blog.html
+++ b/blog.html
@@ -215,14 +215,14 @@
     </div>
 </div>
 <div id="about" class="section" >
-    <div class="container" >
+    <div class="container"  >
         <div class="row">
             <div class="col-md-12">
                 <!-- DETAILS -->
                 <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
-                        <h3 style="text-align: center;" >Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 4 </h3>
+                        <h3 style="text-align: center;" id="chapter4" > Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 4 </h3>
                         <h5 style="text-align: center;"> 2023-03-05</h5>
                         <p class="blog-blog">
                             &emsp; &emsp;Chapter 4 starts with a story about a paramedic woman who saves the life of her father-in-law and about military analysts and their work with radar systems. Those stories have one thing in common and that is - if you are doing something repeatedly, your brain starts noticing important things, learning patterns and storing them for future use.
