--- a/barber/index.html
+++ b/barber/index.html
@@ -32,17 +32,18 @@
     
     <div id="contact">
       <h1 id="headtitle"> Barber shop Gelnica </h1>
-      <p>Phone number: 0911111111</p>
-      <p>Email adress: barber@barber.br</p>
+      <p>0911111111</p>
+      <p>barber@barber.br</p>
     </div>
     <div id="buttons">
+      
+      <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7">
+        <button id="ig-button">
+        </button>
+      </a>
       <a href="https://google.com">
         <button id="button">
           Rezervovať sa
-        </button>
-      </a>
-      <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7">
-        <button id="ig-button">
         </button>
       </a>
       <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7">
