--- a/barber/index.html
+++ b/barber/index.html
@@ -40,6 +40,7 @@
     </div>
     
     <div id="contact">
+      <img id="bg-icon" src="media/bg-icon.png">
       <h1 id="headtitle"> Better Barber Gelnica </h1>
       <a class="links" href="tel:+421 911 036 333">+421 911 036 333</a>
       <a class="links" href="mailto:alex@betterbarber.gl">alex@betterbarber.gl</a>
