Barber Desktop Done

--- a/barber/index.html
+++ b/barber/index.html
@@ -55,11 +55,11 @@
       
     </div>
     <div  id="buttons">
-      <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7">
+      <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7" style="margin-left: auto; margin-right: 0px; padding: 0px;">
         <img id="ig-button" src="/barber/media/iglogo.png">  
       </a>
       
-      <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7">
+      <a href="https://goo.gl/maps/aVQB44a4yHfMYGZB7" style="margin-left: 0px; margin-right: auto; padding: 0px;">
         <img id="map-button" src="/barber/media/gmlogo.png">  
       </a>
     </div>
