--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,10 @@
     <!-- CUSTOM STYLE -->
     <link href="./web_cv/style_dark_dark.css" id="switch_style" rel="stylesheet">
 
-<script type="text/javascript" charset="UTF-8" src="./web_cv/common.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/util.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/marker.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/map.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/overlay.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/onion.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/controls.js"></script></head>
+<script type="text/javascript" charset="UTF-8" src="./web_cv/common.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/util.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/marker.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/map.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/overlay.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/onion.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/controls.js"></script>
+<script src="scripts.js"></script>
+</head>
+
 <body class="vsc-initialized">
 
 
