--- a/barber/index.html
+++ b/barber/index.html
@@ -11,14 +11,9 @@
          
          gtag('config', 'G-7LWMKBBVHL');
       </script>
-      <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">
-      <link rel="manifest" href="/media/site.webmanifest">
-      <link rel="mask-icon" href="/media/safari-pinned-tab.svg" color="#5bbad5">
-      <link rel="shortcut icon" href="/media/favicon.ico">
+      <link rel="icon" type="image/png" href="media/bg-icon.png">
       <meta name="msapplication-TileColor" content="#da532c">
-      <meta name="msapplication-config" content="/media/browserconfig.xml">
+      <meta name="msapplication-config" content="media/browserconfig.xml">
       <meta name="theme-color" content="#ffffff">
       <title>Barber shop Gajdica</title>
       <link rel="stylesheet" href="Style.css">
