blog ancores and share button

--- a/blog.html
+++ b/blog.html
@@ -96,9 +96,8 @@
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" data-layout="" data-size="">
                             <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
-                            <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
+                                <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
-                        
                         </div>
                     </div>
                 </div>
@@ -123,7 +122,8 @@
                             <br><br> &emsp; &emsp;In the end my advice is: practice is the way. Of course, theory is a very important part of the journey, but practice makes you better in a tangible way. You will understand many things only once you try them in practice despite that you may have read them hundreds of times. Nobody was borned with knowledge already in their head so don’t be sad or disappointed if something does not work the first time you try it. Just give it another shot. 
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article2" data-layout="" data-size="">
-                            <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Zdieľať
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
                     </div>
@@ -152,7 +152,8 @@
                             <br><br> &emsp; &emsp;All people should be gaining as much knowledge as possible. General knowledge could put you on a higher level of interest, moreover, you will be able to make interesting conversations with other people.
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article3" data-layout="" data-size="">
-                            <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Zdieľať
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
                     </div>
@@ -180,7 +181,8 @@
                             <br><br> &emsp; &emsp;Be aware, the way, which one you use, is more important than the goal itself. May it happen, that after reaching the goal, we are satisfied with the result and our motivation goes to zero. This is the opposite of habits, and what we are trying to do. 
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article4" data-layout="" data-size="">
-                            <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Zdieľať
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
                     </div>
@@ -206,7 +208,8 @@
                             <br><br> &emsp; &emsp;It could be said that your habits define your identity. The way to change who you are is to change what you do.
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article5" data-layout="" data-size="">
-                            <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Zdieľať
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
                     </div>
@@ -236,7 +239,8 @@
                         
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article6" data-layout="" data-size="">
-                            <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Zdieľať
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
                     </div>
@@ -263,8 +267,9 @@
                             <br><br> &emsp; &emsp;It is wrong to call habits with names such as good or bad. It always depends on your goal. If you want to lose weight, maybe it is good for you to eat less, but for other people who want to gain some muscle, eating is important and prosperous. It is a good approach to scoring your habits and giving them value. 
 
                         </p>
-                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article7" data-layout="" data-size="">
-                            <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Zdieľať
+                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article6" data-layout="" data-size="">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
                     </div>
