--- a/blog.html
+++ b/blog.html
@@ -95,7 +95,7 @@
                             <br><br> &emsp; &emsp;To summarise, running a business is not for everyone. It depends on your mindset, you also need a little bit of courage and you must be able to solve problems at runtime. If you have a good idea, then my advice is to go for it. If everything goes well, then great, otherwise you will only be smarter for the future. 
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article1&amp;src=sdkpreparse"" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
@@ -122,7 +122,7 @@
                             <br><br> &emsp; &emsp;In the end my advice is: practice is the way. Of course, theory is a very important part of the journey, but practice makes you better in a tangible way. You will understand many things only once you try them in practice despite that you may have read them hundreds of times. Nobody was borned with knowledge already in their head so don’t be sad or disappointed if something does not work the first time you try it. Just give it another shot. 
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article2" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
@@ -152,7 +152,7 @@
                             <br><br> &emsp; &emsp;All people should be gaining as much knowledge as possible. General knowledge could put you on a higher level of interest, moreover, you will be able to make interesting conversations with other people.
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article3" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article3&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
@@ -181,7 +181,7 @@
                             <br><br> &emsp; &emsp;Be aware, the way, which one you use, is more important than the goal itself. May it happen, that after reaching the goal, we are satisfied with the result and our motivation goes to zero. This is the opposite of habits, and what we are trying to do. 
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article4" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article4&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
@@ -208,7 +208,7 @@
                             <br><br> &emsp; &emsp;It could be said that your habits define your identity. The way to change who you are is to change what you do.
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article5" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article5&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
@@ -239,7 +239,7 @@
                         
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article6" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article6&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
@@ -267,8 +267,8 @@
                             <br><br> &emsp; &emsp;It is wrong to call habits with names such as good or bad. It always depends on your goal. If you want to lose weight, maybe it is good for you to eat less, but for other people who want to gain some muscle, eating is important and prosperous. It is a good approach to scoring your habits and giving them value. 
 
                         </p>
-                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article6" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23summary2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article7" data-layout="" data-size="">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article7&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
