--- a/blog.html
+++ b/blog.html
@@ -278,6 +278,36 @@
         </div>
     </div>
 </div>
+<div id="about" class="section" >
+    <div class="container"  >
+        <div class="row">
+            <div class="col-md-12">
+                <!-- DETAILS -->
+                <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
+                    <div class="card-content">
+                        <!-- ABOUT PARAGRAPH -->
+                        <h3 style="text-align: center;" id="article8" > Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 5 </h3>
+                        <h5 style="text-align: center;"> 2023-03-12</h5>
+                        <p class="blog-blog">
+                            &emsp; &emsp;Chapter 5 begins with an experiment from 2001. Researchers from Great Britain were working with 248 people and the main point of the experiment was starting a new habit - exercise. People were divided into 3 groups. The first group had only one task, to track how often they exercised. The second group had to read about the exercise itself - what are the benefits of exercise for health. The third group had one additional task, they also had to prepare a schedule for the exercise, when - what time - where.The results were clear. The first and the second groups had similar results. But the third one had much better results.
+                            <br><br> &emsp; &emsp;An Interesting thing about this experiment is that the second and the third group had the same motivation. Both groups had read about the benefits of exercise for the human body but the third group has much better results. The key is making a plan. With a plan you are aware of where and what exactly you should be doing at any time.
+                            <br><br> &emsp; &emsp;If we want to build a new habit, it is important to take control over existing ones. It could be hard because they are mostly subconscious and you are doing it automatically.
+                            <br><br> &emsp; &emsp;The main idea of this chapter is that for establishing a new habit it is important to write down when and where you will do it and not just randomly do it without planning. 
+                            <br><br> &emsp; &emsp;Author’s favourite approach is called habit stacking. The idea is that the new habit should be included in or after an existing one.
+
+
+                        </p>
+                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article8" data-layout="" data-size="">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article8&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--==========================================
                      SCROLL TO TOP
